Removed some formulas and added more comments

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -63,6 +63,7 @@
     "  - $c$ – the number of positions where $x$ is 0 and $y$ is 1\n",
     "  - $d$ – the number of positions where both are 0\n",
     "\n",
+    "Let's see a couple of examples.\n",
     "\n",
     "**Both \"on\" and \"off\" bits**:\n",
     "\n",
@@ -70,42 +71,8 @@
     "   - binary $sim(a, b) = \\frac{|a \\cap b|}{\\max(|a|, |b|)}$,\n",
     "   - values in range $(0, 1)$,\n",
     "\n",
-    " - [CT4](https://match.pmf.kg.ac.rs/electronic_versions/Match68/n2/match68n2_581-592.pdf):\n",
-    "   - binary $sim(a, b) = \\frac{\\log (1 + a \\cdot b)}{\\log (1 + \\|a\\|^2 + \\|b\\|^2 - a \\cdot b)}$\n",
-    "   - count $sim(a, b) = \\frac{\\log (1 + a \\cdot b)}{\\log (1 + \\|a\\|^2 + \\|b\\|^2 - a \\cdot b)}$ ,\n",
-    "   - values in range $(0, 1)$,\n",
-    "\n",
-    " - [Dice](https://esajournals.onlinelibrary.wiley.com/doi/abs/10.2307/1932409):\n",
-    "   - binary $sim(a, b) = \\frac{2 |a \\cap b|}{|a| + |b|}$,\n",
-    "   - count $sim(a, b) = \\frac{2 \\cdot a \\cdot b}{|a|^2 + |b|^2}$,\n",
-    "   - values in range $(0, 1)$,\n",
-    "\n",
-    " - [Harris-Lahey](https://doi.org/10.1901/jaba.1978.11-523):\n",
-    "   - binary: $sim(x, y) = \\frac{a * (2d + b + c)}{2 * (a + b + c)} + \\frac{d * (2a + b + c)}{2 * (b + c + d)}$\n",
-    "   - values in range $(0, n)$, where $n$ is length of the input data,\n",
-    "   - values can be normalized by dividing by $n$,\n",
-    "   - distance always uses normalization option, thus it is not always equal to $1 - similarity$,\n",
-    "\n",
-    " - Kulczynski:\n",
-    "   - binary: $sim(x, y) = \\frac{1}{2} \\left( \\frac{a}{a+b} + \\frac{a}{a+c} \\right)$,\n",
-    "   - values in range $(0, 1)$,\n",
-    "\n",
-    " - [McConnaughey](https://books.google.pl/books?id=7aBbOQAACAAJ)\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b| \\cdot (|a| + |b|) - |a| \\cdot |b|}{|a| \\cdot |b|} = \\frac{|a \\cap b|}{|a|} + \\frac{|a \\cap b|}{|b|} - 1$,\n",
-    "   - values in range $(-1, 1)$,\n",
-    "   - values can be normalized by dividing by adding $1$ and dividing by $2$,\n",
-    "   - distance always uses normalization option, thus it is not always equal to $1 - similarity$,\n",
-    "\n",
     " - [Rogot-Goldberg](https://doi.org/10.1016/0021-9681(66)90032-4): \n",
     "   - binary: $sim(x, y) = \\frac{a}{2 * (2a + b + c)} + \\frac{d}{2 * (2d + b + c)}$,\n",
-    "   - values in range $(0, 1)$,\n",
-    "\n",
-    " - [Simpson](https://doi.org/10.1038/163688a0):\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{\\min(|a|, |b|)}$,\n",
-    "   - values in range $(0, 1)$,\n",
-    "\n",
-    " - [Sokal-Sneath 2](https://www.cabidigitallibrary.org/doi/full/10.5555/19650300280):\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b| + |a \\Delta b} = \\frac{|a \\cap b|}{2 * |a| + 2 * |b| - 3 * |a \\cap b|}$,\n",
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [Tanimoto](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0069-3):\n",
@@ -189,6 +156,13 @@
     "\n",
     "vec_a_sparse = csr_array([vec_a])\n",
     "vec_b_sparse = csr_array([vec_b])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Distance funtion will yield the same result, no matter the format."
    ]
   },
   {
@@ -895,7 +869,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.15 ms ± 1.01 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "3.79 ms ± 1.23 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -918,7 +892,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "312 µs ± 157 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "The slowest run took 29.18 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "1.71 ms ± 1.68 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
