Removed some formulas and added more comments

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -67,10 +67,6 @@
     "\n",
     "**Both \"on\" and \"off\" bits**:\n",
     "\n",
-    " - [Braun-Blanguet](https://www.cabidigitallibrary.org/doi/full/10.5555/19331600801): \n",
-    "   - binary $sim(a, b) = \\frac{|a \\cap b|}{\\max(|a|, |b|)}$,\n",
-    "   - values in range $(0, 1)$,\n",
-    "\n",
     " - [Rogot-Goldberg](https://doi.org/10.1016/0021-9681(66)90032-4): \n",
     "   - binary: $sim(x, y) = \\frac{a}{2 * (2a + b + c)} + \\frac{d}{2 * (2d + b + c)}$,\n",
     "   - values in range $(0, 1)$,\n",
@@ -139,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "id": "9R7j30tJYCWT"
    },
@@ -162,12 +158,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Distance funtion will yield the same result, no matter the format."
+    "The distance function will yield the same result, no matter the format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "id": "SOdaBTHFYCWU"
    },
@@ -184,32 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {
     "id": "bFd5FjwEYCWU"
    },
    "outputs": [],
    "source": [
     "# ruff: noqa: S101\n",
-    "assert binary_sim_numpy == 0\n",
-    "assert binary_sim_sparse == 0"
+    "assert binary_sim_numpy == binary_sim_sparse == 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {
     "id": "dUiqmUI7YCWU"
    },
    "outputs": [],
    "source": [
-    "assert binary_dist_numpy == 1\n",
-    "assert binary_dist_sparse == 1"
+    "assert binary_dist_numpy == binary_dist_sparse == 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {
     "id": "0XfoB7HpYCWU"
    },
@@ -229,8 +223,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count variants work exactly the same way as binary ones."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {
     "id": "-BLsDSKCYCWV"
    },
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {
     "id": "OXHPqhSKYCWV"
    },
@@ -268,31 +269,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {
     "id": "z5rOV0rOYCWV"
    },
    "outputs": [],
    "source": [
-    "assert count_sim_numpy == 0.8787878787878788\n",
-    "assert count_sim_sparse == 0.8787878787878788"
+    "assert count_sim_numpy == count_sim_sparse == 0.8787878787878788"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {
     "id": "fzuli8pqYCWV"
    },
    "outputs": [],
    "source": [
-    "assert count_dist_numpy == 0.12121212121212122\n",
-    "assert count_dist_sparse == 0.12121212121212122"
+    "assert count_dist_numpy == count_dist_sparse == 0.12121212121212122"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {
     "id": "YicTN5KbYCWV"
    },
@@ -315,12 +314,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case we use RDKit's mols, not vectorized data."
+    "In this case, we use RDKit's mols rather than vectorized data. First, prepare the query and reference molecules."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "id": "eURZtPeTYCWV"
    },
@@ -330,6 +329,13 @@
     "\n",
     "mol_query = MolFromSmiles(\"COc1cc(CN2CCC(NC(=O)c3cncc(C)c3)CC2)c(OC)c2ccccc12\")\n",
     "mol_ref = MolFromSmiles(\"COc1ccccc1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's call fraggle function. The default Tversky threshold is 0.8."
    ]
   },
   {
@@ -344,6 +350,13 @@
     "\n",
     "fraggle_sim = fraggle_similarity(mol_query, mol_ref)\n",
     "fraggle_dist = fraggle_distance(mol_query, mol_ref)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Values fall within range $(0, 1)$, so we expect the distance to be $1 - similarity$."
    ]
   },
   {
@@ -378,12 +391,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepare the data and compute the distance using the SKFP function."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "id": "dU1_4arDlidQ"
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666667"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
@@ -391,9 +420,55 @@
     "vec_b = np.array([[0, 1, 1, 0]])\n",
     "skfp_dist = tanimoto_binary_distance(vec_a[0], vec_b[0])\n",
     "\n",
+    "skfp_dist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's compare the result with Scikit-Learn's kNN implementation utilizing the SKFP metric."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "id": "dU1_4arDlidQ"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.66666667]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "nn = NearestNeighbors(n_neighbors=1, metric=tanimoto_binary_distance)\n",
     "nn.fit(vec_a)\n",
     "distances, _ = nn.kneighbors(vec_b)\n",
+    "\n",
+    "distances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NearestNeighbors returns a matrix, so we'll need to extract a single value for comparison."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sklearn_dist = distances[0][0]\n",
     "assert np.isclose(skfp_dist, sklearn_dist)"
    ]
@@ -531,6 +606,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make sure that the distance is, in fact, $1−similarity$. Subtracting the similarity matrix from a scalar may look odd, but NumPy handles broadcasting nicely."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
@@ -547,7 +629,7 @@
     "id": "dSV7ls2Oc-LH"
    },
    "source": [
-    "You can also use count Tanimoto variant."
+    "You can also use the count Tanimoto variant."
    ]
   },
   {
@@ -782,17 +864,35 @@
     "id": "ugtxVJxSgFIP"
    },
    "source": [
-    "Lastly, lets prove that bulk variant produces the same result as calling\n",
-    "a standard one in a nested loop. Lets use so real world data."
+    "Lastly, let's prove that bulk variant produces the same result as calling\n",
+    "a standard one in a nested loop. Lets use some real world data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First of all, let's transform [smiles](https://en.wikipedia.org/wiki/Simplified_Molecular_Input_Line_Entry_System) into **fingerprints**, effectively turning them into vectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {
     "id": "U7UsgXGXgaod"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 0], dtype=uint32)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from skfp.fingerprints import ECFPFingerprint\n",
     "\n",
@@ -806,21 +906,44 @@
     "]\n",
     "\n",
     "fp = ECFPFingerprint(count=True)\n",
-    "fps = fp.transform(mols_list)"
+    "fps = fp.transform(mols_list)\n",
+    "\n",
+    "fps[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that the input vectors use **count** data. Let's call the appropriate method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the similarity using nested loops."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {
     "id": "8YbFKfihgUKO"
    },
    "outputs": [],
    "source": [
     "manual_pairwise_sim = [\n",
-    "    [tanimoto_binary_similarity(fps[i], fps[j]) for j in range(len(fps))]\n",
+    "    [tanimoto_count_similarity(fps[i], fps[j]) for j in range(len(fps))]\n",
     "    for i in range(len(fps))\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now, let's use a bulk function."
    ]
   },
   {
@@ -851,12 +974,12 @@
     "id": "b9SizDchhkXe"
    },
    "source": [
-    "Lets also check the performance."
+    "Let's also check the performance of both approaches."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -869,7 +992,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.79 ms ± 1.23 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "4.47 ms ± 729 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -879,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -892,13 +1015,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 29.18 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "1.71 ms ± 1.68 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "265 µs ± 68.2 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit -r 3 -n 10 [bulk_tanimoto_binary_similarity(fps, fps)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bulk variant is clearly faster."
    ]
   }
  ],
