Cleaned-up formulas, swapped asserts for comments

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -6,7 +6,7 @@
     "id": "BbzeeN90YCWQ"
    },
    "source": [
-    "## Similarity and distance metrics"
+    "# Similarity and distance metrics"
    ]
   },
   {
@@ -28,7 +28,7 @@
     " - those working on the vectorized molecules, which can be further divided based on the type of input:\n",
     "     - binary data,\n",
     "     - count (non-binary) data.\n",
-    " - those working on RDKit's ``Mol`` objects.\n",
+    " - those working on RDKit ``Mol`` objects.\n",
     "\n",
     "Additionally, every metric is also implemented in a bulk form, allowing matrices to be passed as input.\n",
     "Every similarity has its corresponding distance, which is usually equal to $1 - similarity$. \n",
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metrics overview"
+    "## Metrics overview"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vector-based methods can be split into two groups. The first considers only 'on' bits (1s in vector representation), and the second also takes 'off' bits (0s in vector representation) into consideration.\n",
+    "Vector-based methods can be split into two groups. The first considers only \"on\" bits (1s in vector representation), and the second also takes 'off' bits (0s in vector representation) into consideration.\n",
     "\n",
     "Keep in mind that metrics use a slightly different naming convention. If a similarity function takes arguments\n",
     "$x$ and $y$, then inside the formula:\n",
@@ -67,43 +67,49 @@
     "\n",
     "**Both \"on\" and \"off\" bits**:\n",
     "\n",
-    " - [Rogot-Goldberg](https://doi.org/10.1016/0021-9681(66)90032-4): \n",
-    "   - binary: $sim(x, y) = \\frac{a}{2 * (2a + b + c)} + \\frac{d}{2 * (2d + b + c)}$,\n",
-    "   - values in range $(0, 1)$,\n",
-    "\n",
-    " - [Tanimoto](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0069-3):\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b|} = \\frac{|a \\cap b|}{|a| + |b| - |a \\cap b|}$\n",
-    "   - count: $sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}$,\n",
-    "   - values in range $(0, 1)$,\n",
+    "- **[Rogot-Goldberg](https://doi.org/10.1016/0021-9681(66)90032-4):**  \n",
+    "  - binary similarity:\n",
+    "  $$\n",
+    "  sim(x, y) = \\frac{a}{2 \\times (2a + b + c)} + \\frac{d}{2 \\times (2d + b + c)}\n",
+    "  $$\n",
+    "  - Values in range \\[0, 1]\\.\n",
     "\n",
     "**Only \"on\" bits**:\n",
     "\n",
-    " - [Rand](https://www.tandfonline.com/doi/abs/10.1080/01621459.1971.10482356):\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{n}$,\n",
-    "   - values in range $(0, 1)$,\n",
+    "- **[Tanimoto](https://www.tandfonline.com/doi/abs/10.1080/01621459.1971.10482356):**  \n",
+    "  - binary similarity:\n",
+    "  $$\n",
+    "  sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b|} = \\frac{|a \\cap b|}{|a| + |b| - |a \\cap b|}\n",
+    "  $$\n",
     "\n",
-    " - [Russell](https://www.cabidigitallibrary.org/doi/full/10.5555/19412900343):\n",
-    "   - binary: $sim(x, y) = \\frac{a}{n}$,\n",
-    "   - values in range $(0, 1)$,\n"
+    "  - count similarity:\n",
+    "  $$\n",
+    "  sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}\n",
+    "  $$\n",
+    "\n",
+    "  - Values in range \\[0, 1]\\.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Operating on mols**:\n",
+    "**Operating on molecules**:\n",
     "\n",
     " - [Fraggle](https://raw.github.com/rdkit/UGM_2013/master/Presentations/Hussain.Fraggle.pdf):\n",
     "   - uses fragmentation algorithm (ring cut in this case) to split the **query molecule** at acyclic and ring bonds,\n",
     "   - fragments are compared to the **reference molecule** using [Tversky similarity](https://en.wikipedia.org/wiki/Tversky_index) (α=0.95,\n",
     "    β=0.05),\n",
     "   - fragments with **Tversky similarity** above defined threshold are used for calculating Tanimoto similarity with reference molecule,\n",
-    "   - values in range $(0, 1)$\n",
+    "   - values in range $[0, 1]$\n",
     " - [MCS](https://doi.org/10.1007/s10822-015-9872-1) (Maximum Common Similarity):\n",
     "   - uses [FMCS algorithm](https://doi.org/10.1186/1758-2946-5-S1-O6) to measure overlap of two molecules,\n",
     "   - penalizes difference in number of atoms between molecules,\n",
-    "   - $sim(mol_a, mol_b) = \\frac{numAtoms(MCS(mol_a, mol_b))}{numAtoms(mol_a) + numAtoms(mol_b) - numAtoms(MCS(mol_a, mol_b))}$\n",
-    "   - values in range $(0, 1)$"
+    "   - values in range $[0, 1]$,\n",
+    "   - formula:\n",
+    "   $$\n",
+    "   sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}\n",
+    "   $$"
    ]
   },
   {
@@ -130,12 +136,12 @@
     "id": "cUo6lY2nYCWS"
    },
    "source": [
-    "We can pass the input data as either numpy  or csr sparse arrays"
+    "We can pass the input data as either NumPy or CSR sparse arrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 192,
    "metadata": {
     "id": "9R7j30tJYCWT"
    },
@@ -163,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 193,
    "metadata": {
     "id": "SOdaBTHFYCWU"
    },
@@ -179,38 +185,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All \"on\" bits are in different positions. We expect the Tanimoto similarity to be equal to 0."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 194,
    "metadata": {
     "id": "bFd5FjwEYCWU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# ruff: noqa: S101\n",
-    "assert binary_sim_numpy == binary_sim_sparse == 0"
+    "print(binary_sim_numpy == binary_sim_sparse == 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus, the distance should be equal to 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 195,
    "metadata": {
     "id": "dUiqmUI7YCWU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert binary_dist_numpy == binary_dist_sparse == 1"
+    "print(binary_dist_numpy == binary_dist_sparse == 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the distance should be equal to $1 - similarity$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 196,
    "metadata": {
     "id": "0XfoB7HpYCWU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert binary_dist_numpy == 1 - binary_sim_numpy\n",
-    "assert binary_dist_sparse == 1 - binary_sim_sparse"
+    "print(binary_dist_numpy == 1 - binary_sim_numpy)\n",
+    "print(binary_dist_sparse == 1 - binary_sim_sparse)"
    ]
   },
   {
@@ -231,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 197,
    "metadata": {
     "id": "-BLsDSKCYCWV"
    },
@@ -254,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 198,
    "metadata": {
     "id": "OXHPqhSKYCWV"
    },
@@ -269,36 +320,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 199,
    "metadata": {
     "id": "z5rOV0rOYCWV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert count_sim_numpy == count_sim_sparse == 0.8787878787878788"
+    "print(count_sim_numpy == count_sim_sparse == 0.8787878787878788)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 200,
    "metadata": {
     "id": "fzuli8pqYCWV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert count_dist_numpy == count_dist_sparse == 0.12121212121212122"
+    "print(count_dist_numpy == count_dist_sparse == 0.12121212121212122)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 201,
    "metadata": {
     "id": "YicTN5KbYCWV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert count_dist_numpy == 1 - count_sim_numpy\n",
-    "assert count_dist_sparse == 1 - count_sim_sparse"
+    "print(count_dist_numpy == 1 - count_sim_numpy)\n",
+    "print(count_dist_sparse == 1 - count_sim_sparse)"
    ]
   },
   {
@@ -314,12 +390,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, we use RDKit's mols rather than vectorized data. First, prepare the query and reference molecules."
+    "In this case, we use RDKit ``Mol`` objects rather than vectorized data. First, prepare the query and reference molecules."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {
     "id": "eURZtPeTYCWV"
    },
@@ -340,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 203,
    "metadata": {
     "id": "X5VDP2qTYCWV"
    },
@@ -356,20 +432,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Values fall within range $(0, 1)$, so we expect the distance to be $1 - similarity$."
+    "Values fall within range $[0, 1]$, so we expect the distance to be $1 - similarity$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 204,
    "metadata": {
     "id": "OQNn3USQYCWW"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert fraggle_sim == 0.1640625\n",
-    "assert fraggle_dist == 0.8359375\n",
-    "assert fraggle_dist == 1 - fraggle_sim"
+    "print(fraggle_sim == 0.1640625)\n",
+    "print(fraggle_dist == 0.8359375)\n",
+    "print(fraggle_dist == 1 - fraggle_sim)"
    ]
   },
   {
@@ -399,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +494,7 @@
        "0.6666666666666667"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 206,
    "metadata": {
     "id": "dU1_4arDlidQ"
    },
@@ -443,7 +529,7 @@
        "array([[0.66666667]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,12 +551,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 207,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "sklearn_dist = distances[0][0]\n",
-    "assert np.isclose(skfp_dist, sklearn_dist)"
+    "print(np.isclose(skfp_dist, sklearn_dist))"
    ]
   },
   {
@@ -497,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 208,
    "metadata": {
     "id": "fUtOB4EAYCWW"
    },
@@ -525,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 209,
    "metadata": {
     "id": "g6JvBvgzYCWW"
    },
@@ -539,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 210,
    "metadata": {
     "id": "ElBquJpaYCWX"
    },
@@ -551,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 211,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -568,7 +662,7 @@
        "       [0.66666667, 0.66666667, 1.        ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 212,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -596,7 +690,7 @@
        "       [0.33333333, 0.33333333, 0.        ]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,13 +708,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 213,
    "metadata": {
     "id": "yVqLYs2mcHL9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert (np.isclose(bulk_binary_dist_numpy, 1 - bulk_binary_sim_numpy)).all()"
+    "print((np.isclose(bulk_binary_dist_numpy, 1 - bulk_binary_sim_numpy)).all())"
    ]
   },
   {
@@ -634,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 214,
    "metadata": {
     "id": "4OVmlVFldBjj"
    },
@@ -662,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 215,
    "metadata": {
     "id": "EgYpnj7kdGlH"
    },
@@ -676,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 216,
    "metadata": {
     "id": "d4Be-8rodKXe"
    },
@@ -688,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 217,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -705,7 +807,7 @@
        "       [0.89655172, 0.71428571, 0.20895522]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 218,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -733,7 +835,7 @@
        "       [0.10344828, 0.28571429, 0.79104478]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,13 +846,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 219,
    "metadata": {
     "id": "szBjBVHUdSUD"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert (np.isclose(bulk_count_dist_numpy, 1 - bulk_count_sim_numpy)).all()"
+    "print((np.isclose(bulk_count_dist_numpy, 1 - bulk_count_sim_numpy)).all())"
    ]
   },
   {
@@ -764,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 220,
    "metadata": {
     "id": "Jt0wjKx7djie"
    },
@@ -781,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 221,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -798,7 +908,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 222,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -837,7 +947,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,13 +959,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 223,
    "metadata": {
     "id": "H-wTQQymf4i8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert np.allclose(bulk_bin_sim_one_arr, bulk_bin_sim_two_arrs)"
+    "print(np.allclose(bulk_bin_sim_one_arr, bulk_bin_sim_two_arrs))"
    ]
   },
   {
@@ -877,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 224,
    "metadata": {
     "id": "U7UsgXGXgaod"
    },
@@ -888,7 +1006,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=uint32)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 225,
    "metadata": {
     "id": "8YbFKfihgUKO"
    },
@@ -948,24 +1066,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 226,
    "metadata": {
     "id": "K0ifGaV5hDNU"
    },
    "outputs": [],
    "source": [
-    "bulk_sim = bulk_tanimoto_binary_similarity(fps, fps)"
+    "bulk_sim = bulk_tanimoto_count_similarity(fps, fps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do nested loops and the bulk function yield the same result?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 227,
    "metadata": {
     "id": "eQpVZwnUiV7M"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "assert np.allclose(manual_pairwise_sim, bulk_sim)"
+    "print(np.allclose(manual_pairwise_sim, bulk_sim))"
    ]
   },
   {
@@ -979,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 228,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -992,17 +1125,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.47 ms ± 729 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "3.97 ms ± 144 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit -r 3 -n 10 [tanimoto_binary_similarity(fps[i], fps[j]) for i in range(len(fps)) for j in range(len(fps))]"
+    "%timeit -r 3 -n 10 [tanimoto_count_similarity(fps[i], fps[j]) for i in range(len(fps)) for j in range(len(fps))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 229,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1015,12 +1148,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "265 µs ± 68.2 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "The slowest run took 6.16 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "5.13 ms ± 3.41 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit -r 3 -n 10 [bulk_tanimoto_binary_similarity(fps, fps)]"
+    "%timeit -r 3 -n 10 [bulk_tanimoto_count_similarity(fps, fps)]"
    ]
   },
   {
